convert to postrgres

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DB_HOST=your_database_host
-DB_PORT=your_database_port
+DB_PORT=5432
 DB_NAME=your_database_name
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
+AWS_REGION=us-east-1
+SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123456789012/your-queue-name
