user secrets manager

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ DB_PORT=5432
 DB_NAME=your_database_name
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
+DB_SECRET_NAME=your_secret_name
 AWS_REGION=us-east-1
 SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123456789012/your-queue-name
