--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,23 @@ Thumbs.db
 # Logs
 logs
 *.log
+
+# Terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+*.tfvars
+*.tfvars.json
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraform.lock.hcl
+main.tf
+
+#Pycache
+*__pycache__*
